boat-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boat-app
  template:
    metadata:
      labels:
        app: boat-app
        version: v1
    spec:
      containers:
      - name: boat-app
        image: dragoneffect/boat-rental-app:latest
        ports:
        - containerPort: 3000
