auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: dragoneffect/auth-service:lastest
        ports:
        - containerPort: 3003
          name: http
---
# Fichier: auth-service.yaml
# Définit le service Kubernetes (identique)

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 3003
    targetPort: 3003
    name: http
