boat-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boat-app-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: boat-app
  type: ClusterIP
