frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: dragoneffect/frontend-app:latest 
        ports:
        - containerPort: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 3100
    targetPort: 3100
  type: ClusterIP
