boat-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boat-routing
spec:
  hosts:
  - "*"  # Corresponds to the gateway
  gateways:
  - boat-gateway
  http:
  - match:
    - uri:
        prefix: /boats
    route:
    - destination:
        host: boat-app-service
        port:
          number: 3000
      weight: 100
  - match:
    - uri:
        prefix: /reservations
    route:
    - destination:
        host: reservation-service
        port:
          number: 3001
      weight: 100
  - match:
    - uri:
        prefix: /login
    - uri:
        prefix: /register
    route:
    - destination:
        host: auth-service
        port:
          number: 3003
      weight: 100
  - route:
    - destination:
        host: frontend-app
        port:
          number: 3100
      weight: 100
